# threadstat-rust

./: .gitignore  Cargo.toml  build.rs
mqueue/: Cargo.toml
mqueue/src/: lib.rs
non-empty/: Cargo.toml
non-empty/src/: lib.rs
perf-ffi/: Cargo.toml  build.rs  wrapper.h
perf-ffi/src/: error.rs  group_reader.rs  lib.rs  perf_event.rs  perf_event_config.rs  pfm.rs  read_structs.rs  sys.rs
poll/: Cargo.toml
poll/src/: lib.rs
signals/: Cargo.toml
signals/src/: lib.rs
src/: main.rs  threadstat_message.rs
wrapper/: Makefile  shared_def.h  wrapper.c
