[workspace]
members = ["mqueue","non-empty","perf-ffi", "signals", "poll"]
resolver = "3"

[workspace.dependencies]
string-intern = {git = "https://github.com/JacobMalloy/string-intern.git", version = "0.1.x"}

[package]
name = "threadstat-rust"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "0.71"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
perf-ffi = { path = "perf-ffi", features = ["pfm"] }
string-intern = {workspace=true}
non-empty = {path = "./non-empty/"}
mqueue = { path = "mqueue" }
signals = { path = "signals" }
poll = { path = "poll" }

[profile.release]
lto = "fat"
codegen-units = 1
